refactor: delete old interceptor