@@ -1,6 +1,10 @@
 plugins {
     id 'org.springframework.boot' version '4.0.3' apply false
     id 'io.spring.dependency-management' version '1.1.7' apply false
+
+    id "com.diffplug.spotless" version "8.3.0" apply false
+    id 'io.openapiprocessor.openapi-processor' version '2026.1' apply false
+
 }
 
 group = 'com.smartjam'
@@ -12,6 +16,8 @@ subprojects {
     apply plugin: 'java'
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
+
+    apply plugin: 'com.diffplug.spotless'
 
     java {
         toolchain {
@@ -27,12 +33,31 @@ subprojects {
         compileOnly 'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
 
+        testCompileOnly 'org.projectlombok:lombok'
+        testAnnotationProcessor 'org.projectlombok:lombok'
+
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
         testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     }
 
+
+    spotless {
+        java {
+            targetExclude '**/build/generated/**/*.java'
+            palantirJavaFormat("2.89.0").formatJavadoc(true)
+
+            removeUnusedImports()
+
+            importOrder('java', 'jakarta', '', '\\#')
+
+            toggleOffOn()
+        }
+    }
+
     tasks.named('test') {
         useJUnitPlatform()
+
+        jvmArgs("-XX:+EnableDynamicAgentLoading")
     }
 
 }
